--- a/footer.html
+++ b/footer.html
@@ -1,20 +1,23 @@
+<!DOCTYPE html>
+<html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="footer.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-	<footer id="footer" class="footer">
+	<footer id="footer" class="footer container-fluid">
 		<!-- upper footer section -->
 		<div class="upper-footer">
-			<div class="three-columns">
-				<div class="column-one">
+			<div class="row three-columns">
+				<div class="col-md-4 col-sm-4 column-one">
 					<h3>Hotelis</h3>
 					<p><a href="#">Privacy</a> - <a href="#">Terms</a></p>
 				</div>
-				<div class="column-two"></div>
-				<div class="column-three">
+				<div class="col-md-4 col-sm-4 column-two"></div>
+				<div class="col-md-4 col-sm-4 column-three">
 					<h3>Contact Info</h3>
 					<p><i class="fa fa-home" aria-hidden="true"></i> 123 Main Street</p>
 					<p><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+123456789">+ 123456789</a></p>
@@ -23,10 +26,10 @@
 			</div>
 
 			<!-- newsletter section -->
-			<div class="newsletter">
+			<div class="row col-md-12 newsletter">
 				<h4>Stay connected</h4>
 				<p>Get news from us directly in your mail</p>
-				<div class="newsletter form">
+				<div class="newsletter-form">
 					<form action="#">
 					  <input type="text" id="email" name="email" placeholder="Your Mail">
 					  <input type="submit" value="Subscribe">
@@ -34,11 +37,12 @@
 				</div>
 			</div>
 		</div>
+
 		<!-- copyright section -->
 		<hr>
-		<div class="copyright">
-			<span class="copyright-left">Copyright &copy; Hotelis.Inc</span>
-			<span class="copyright-right">
+		<div class="row copyright">
+			<span class="col-sm-12 col-md-6 col-lg-8 copyright-left">Copyright &copy; Hotelis.Inc</span>
+			<span class="col-sm-12 col-md-6 col-lg-4 copyright-right">
 				<a href="#">About Us</a>
 				<a href="#">Terms of Use</a>
 				<a href="#">Privacy Policy</a>
@@ -51,3 +55,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+</html>
